<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/textView_choice"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView_choice" />

        <TextView
            android:id="@+id/textView_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/space"
            android:enabled="true"
            android:text="@string/textview_choice"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:text="@string/button_L1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonL1"
            android:layout_centerHorizontal="true"
            android:text="@string/button_l2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonL2"
            android:layout_alignStart="@+id/buttonL2"
            android:layout_below="@+id/buttonL2"
            android:text="@string/button_l3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonm1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView2"
            android:text="@string/button_m1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonm2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/buttonm1"
            android:text="@string/button_m2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_choice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/licence_title_main"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonL3"
            android:layout_centerHorizontal="true"
            android:text="@string/Master_title_main"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />



</RelativeLayout>
