<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dz.da3sou9a.oualaeddine.lmdulator.activities.frags.tableau_notes">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dz.da3sou9a.oualaeddine.LMDulator.Notes$PlaceholderFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableauNotes"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tableRow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="#d837474f"
                        android:maxLines="1"
                        android:text="@string/module"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="#d837474f"
                        android:maxLines="1"
                        android:text="@string/tp"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="#d837474f"
                        android:maxLines="1"
                        android:text="@string/td"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="#d837474f"
                        android:maxLines="1"
                        android:text="@string/controle"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="#d837474f"
                        android:maxLines="1"
                        android:text="@string/credit"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="#d837474f"
                        android:maxLines="1"
                        android:text="@string/moyenne"
                        android:textAlignment="center" />
                </TableRow>
                <!--
                            <TableRow
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tableRow2"
                                android:background="#a037474f">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="fill_parent"

                                    android:id="@+id/moduleName1"
                                    android:width="50dp"
                                    android:height="30dp"
                                    android:textAlignment="center"
                                    android:background="#d837474f"
                                    android:maxLines="1"
                                    android:layout_weight="1" />

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="fill_parent"
                                    android:inputType="numberDecimal"
                                    android:ems="10"
                                    android:id="@+id/tp1"
                                    android:width="50dp"
                                    android:height="30dp"
                                    android:textAlignment="center"
                                    android:maxLines="1"
                                    android:layout_weight="1" />

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="fill_parent"
                                    android:inputType="numberDecimal"
                                    android:ems="10"
                                    android:id="@+id/td1"
                                    android:width="50dp"
                                    android:height="30dp"
                                    android:textAlignment="center"
                                    android:maxLines="1"
                                    android:layout_weight="1" />

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="fill_parent"
                                    android:ems="10"
                                    android:id="@+id/cont1"
                                    android:width="50dp"
                                    android:height="30dp"
                                    android:textAlignment="center"
                                    android:inputType="numberDecimal"
                                    android:layout_weight="1" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="fill_parent"
                                    android:text="00"
                                    android:id="@+id/cred1"
                                    android:textAlignment="center"
                                    android:height="30dp"
                                    android:width="50dp"
                                    android:maxLines="1"
                                    android:inputType="numberDecimal"
                                    android:layout_weight="1" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="fill_parent"
                                    android:text="0,00"
                                    android:id="@+id/moy1"
                                    android:width="50dp"
                                    android:height="30dp"
                                    android:textAlignment="center"
                                    android:inputType="numberDecimal"
                                    android:background="#37474f"
                                    android:maxLines="1"
                                    android:layout_weight="1" />
                            </TableRow>
                -->
            </TableLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/rec_notes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="top">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textMoyS"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="90dp"
                        android:background="#96263238"
                        android:maxLines="1"
                        android:text="@string/moyennesemestre"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/moyS"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="90dp"
                        android:background="#96263238"
                        android:maxLines="1"
                        android:text="0.00"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textCredTotalS"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="90dp"
                        android:background="#96263238"
                        android:maxLines="1"
                        android:text="@string/creditsemestre"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/credS"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="90dp"
                        android:background="#96263238"
                        android:maxLines="1"
                        android:text="00"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:elevation="1dp"
                android:text="@string/buttonSave" />
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
